src/objects/Apttus_Approval__Approval_Request__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Approval__Object_Id_Link__c</fullName>
        <formula>IF( Apttus_Approval__Object_Type__c = &apos;Apttus__Agreement_Term_Exception__c&apos;, HYPERLINK(Apttus_Approval__Object_Id__c , &quot;View Agreement Term Exception&quot;), HYPERLINK(Apttus_Approval__Object_Id__c , &quot;View &quot; &amp; Apttus_Approval__Object_Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Object_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Object_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Object_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ParentRequestId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the parent approval request. Only applicable for child process steps.</description>
        <inlineHelpText>ID of the parent approval request. Only applicable for child process steps.</inlineHelpText>
        <label>Parent Request</label>
        <referenceTo>Apttus_Approval__Approval_Request__c</referenceTo>
        <relationshipLabel>Child Approval Requests</relationshipLabel>
        <relationshipName>ChildApprovalRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Parent_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the parent agreement associated with the approval request. Only valid for agreement term exception related approval requests.</description>
        <label>Parent Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Child Approval Requests</relationshipLabel>
        <relationshipName>Child_Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__PrevAssignedToId__c</fullName>
        <description>The id of the assignee the request was previously assigned to</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Prev Assigned To Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__PrevAssignedToName__c</fullName>
        <description>The name of the assignee the request was previously assigned to</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Prev Assigned To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__PrevAssignedToType__c</fullName>
        <description>The type of assignee the request was previously assigned to</description>
        <label>Prev Assigned To Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ProcessInstanceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the approval process instance associated with the approval request</description>
        <label>Approval Process Instance</label>
        <referenceTo>Apttus_Approval__ApprovalProcessInstance__c</referenceTo>
        <relationshipLabel>Approval Requests</relationshipLabel>
        <relationshipName>ApprovalRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Rejection_Action__c</fullName>
        <label>Rejection Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group Rejection</fullName>
                </value>
                <value>
                    <fullName>Final Rejection</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Group &amp; Final Rejection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Related_Agreement_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to indicate a user who is the agreement owner when the request is for an agreement or agreement term exception.  This value is populated at runtime by the approvals engine when the request is assigned and is used the Approval Request Comments Modified email alert to send additional notifications to the Agreement Owner, Requestor, and Opportunity owner.</description>
        <label>Related Agreement Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Related_Agreement_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to indicate a user who is the agreement owner when the request is for an agreement or agreement term exception.  This value is populated at runtime by the approvals engine when the request is assigned and is used the Approval Request Comments Modified email alert to send additional notifications to the Agreement Owner, Requestor, and Opportunity owner.</description>
        <label>Related Agreement Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Related_Agreement_Term_Exception__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Agreement Term Exception</label>
        <referenceTo>Apttus__Agreement_Term_Exception__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>R00N70000002CXCIEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Related_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>R00N70000001lyBVEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Related_Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to indicate a user who is the agreement owner when the request is for an agreement or agreement term exception.  This value is populated at runtime by the approvals engine when the request is assigned and is used the Approval Request Comments Modified email alert to send additional notifications to the Agreement Owner, Requestor, and Opportunity owner.</description>
        <label>Related Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>R00N70000001lyBlEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__RequestType__c</fullName>
        <description>The approval request type</description>
        <inlineHelpText>The approval request type</inlineHelpText>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Subprocess</fullName>
                </value>
                <value>
                    <fullName>Child Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Request_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Send_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SequenceString__c</fullName>
        <formula>LPAD(Apttus_Approval__Sequence__c, 5, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Sequence String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Sequence__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub-Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Status_Link__c</fullName>
        <formula>HYPERLINK(Id,
CASE(Apttus_Approval__Approval_Status__c,
&quot;Not Submitted&quot;,&quot;Not Submitted&quot;,
&quot;Notified&quot;,&quot;Notified&quot;,
&quot;Submitted&quot;,&quot;Submitted&quot;,
&quot;Assigned&quot;,&quot;Assigned&quot;,
&quot;Reassigned&quot;,&quot;Reassigned&quot;,
&quot;Approved&quot;,&quot;Approved&quot;,
&quot;Rejected&quot;,&quot;Rejected&quot;,
&quot;Cancelled&quot;,&quot;Cancelled&quot;,
&quot;On Hold&quot;,&quot;On Hold&quot;, 
&quot;None&quot;),
&quot;_top&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepLabel__c</fullName>
        <description>The step label</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The step label</inlineHelpText>
        <label>Step Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepNameLink__c</fullName>
        <formula>IF (OR(ISPICKVAL(Apttus_Approval__Approval_Status__c ,&quot;Assigned&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c ,&quot;Reassigned&quot;)), HYPERLINK(&quot;/apex/Apttus_Approval__ApprovalSummaryLaunch?Id=&quot;&amp;Id&amp;&quot;&amp;pageMode=approveReject&quot;, Apttus_Approval__Step_Name__c, &quot;_top&quot;), Apttus_Approval__Step_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Step</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSequenceString__c</fullName>
        <description>Sequence with trailing zeros suppressed</description>
        <formula>IF(FIND(&apos;.&apos;, TEXT(Apttus_Approval__StepSequence__c)) = 2, LEFT(TEXT(Apttus_Approval__StepSequence__c), FIND(&apos;.&apos;, TEXT(Apttus_Approval__StepSequence__c))) + TEXT(VALUE(RIGHT(RPAD(TEXT(Apttus_Approval__StepSequence__c), 5, &apos;0&apos;), 3))), LEFT(TEXT(Apttus_Approval__StepSequence__c), FIND(&apos;.&apos;, TEXT(Apttus_Approval__StepSequence__c))) + TEXT(VALUE(RIGHT(RPAD(TEXT(Apttus_Approval__StepSequence__c), 6, &apos;0&apos;), 3))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sequence with trailing zeros suppressed</inlineHelpText>
        <label>Sequence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSequence__c</fullName>
        <description>The step execution sequence</description>
        <label>Sequence</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Group_Seq_Number__c</fullName>
        <label>Step Group Seq Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Name__c</fullName>
        <description>The step name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Definition Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionComment1__c</fullName>
        <description>A comment entered by the submitter when the request was submitted that can be either a process or step level comment.  The comment label is specified by the &quot;Submission Comment 1 Label&quot; field in the related approval process definition.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A comment entered by the submitter when the request was submitted that can be either a process or step level comment.  The comment label is specified by the &quot;Submission Comment 1 Label&quot; field in the related approval process definition.</inlineHelpText>
        <label>Submission Comment 1</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionComment2__c</fullName>
        <description>A second comment entered by the submitter when the request was submitted.  The comment label is specified by the &quot;Submission Comment 2 Label&quot; field in the related approval process definition.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A second comment entered by the submitter when the request was submitted.  The comment label is specified by the &quot;Submission Comment 2 Label&quot; field in the related approval process definition.</inlineHelpText>
        <label>Submission Comment 2</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionComment3__c</fullName>
        <description>A third comment entered by the submitter when the request was submitted.  The comment label is specified by the &quot;Submission Comment 3 Label&quot; field in the related approval process definition.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A third comment entered by the submitter when the request was submitted.  The comment label is specified by the &quot;Submission Comment 3 Label&quot; field in the related approval process definition.</inlineHelpText>
        <label>Submission Comment 3</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubprocessDependsOn__c</fullName>
        <description>List of sub processes (belonging to the same step) which must be completed before this sub process. The list contains a comma separated subprocess sequence numbers</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subprocess Depends On</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubprocessName__c</fullName>
        <description>The name of the subprocess the step is associated with</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subprocess Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubprocessSequence__c</fullName>
        <description>The subprocess execution sequence</description>
        <label>Subprocess Sequence</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubstepDependsOn__c</fullName>
        <description>List of sub steps (belonging to the same subprocess) which must be completed before this substep. The list contains a comma separated substep sequence numbers</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Substep Depends On</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubstepName__c</fullName>
        <description>The name of the substep associated with the subprocess.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the substep associated with the subprocess.</inlineHelpText>
        <label>Substep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubstepSequence__c</fullName>
        <description>The substep execution sequence within a subprocess</description>
        <label>Substep Sequence</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Workflow_Trigger_Added_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that gets set by the ApprovalAction visualforce page when comments are added to an approval request without actually approving or rejecting the request. This flag then becomes the trigger for workflow rules that get fired to send a notification to parties that comments have been entered for the request.</description>
        <label>Workflow Trigger Added Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CQApprov__CartId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated cart</description>
        <label>Related Cart</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Approval Requests</relationshipLabel>
        <relationshipName>Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CQApprov__CartLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated cart line item</description>
        <label>Related Cart Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Approval Requests</relationshipLabel>
        <relationshipName>Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CQApprov__CartOwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated cart owner</description>
        <inlineHelpText>ID of the associated cart owner</inlineHelpText>
        <label>Related Cart Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPApprov__ProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal</description>
        <label>Related Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Approval Requests</relationshipLabel>
        <relationshipName>ApprovalRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPApprov__ProposalLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal line item</description>
        <label>Related Quote/Proposal Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Approval Requests</relationshipLabel>
        <relationshipName>ApprovalRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPApprov__ProposalOwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal owner</description>
        <label>Related Quote/Proposal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asigneed_User_NSA_Check__c</fullName>
        <formula>Approver_User__r.NSA_Compliant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asigneed_User NSA Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegate_Approvers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delegate Approvers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_User1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate User1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegate_User2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate User2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegate_User3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate User3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NF_Approval_Visibility_Status__c</fullName>
        <formula>IF( 
OR( 
ISPICKVAL(Apttus_Approval__Related_Opportunity__r.StageName, &apos;Closed - Cancelled by Customer&apos;), 
ISPICKVAL(Apttus_Approval__Related_Opportunity__r.StageName, &apos;Closed - Lost to Competitor&apos;), 
ISPICKVAL(Apttus_Approval__Related_Opportunity__r.StageName, &apos;Closed – Obsolete&apos;), 
ISPICKVAL(Apttus_Approval__Related_Opportunity__r.StageName, &apos;Closed - Withdrawn by Nokia&apos;), 
ISPICKVAL(Apttus_Approval__Related_Opportunity__r.StageName, &apos;Completed&apos;) 
) 
,0, 
IF( 
(NOW() - Tech_Approval_Date__c )&lt;= 7,1, 

IF( 
ISBLANK(Tech_Approval_Date__c),1,0 
) 

) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NF_Approval Visibility Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NF_Assignee_Type__c</fullName>
        <description>Used to fill the type of Assignee (Approver/Validator/Contributor) from AssigneeRuleEntry</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Assignee Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_Assignee_Value__c</fullName>
        <description>Assignee value from Approval Rule Assignee</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Assignee Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_BG_Attribute__c</fullName>
        <formula>Related_Sales_Role__r.BG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BG Attribute</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_MyApproval_List__c</fullName>
        <description>My Pending approvals list for Approvals</description>
        <formula>IF( CONTAINS(Apttus_Approval__Assigned_To_Id__c, $User.Id) , 1, IF(CONTAINS(Apttus_Approval__DelegateApproverIds__c, $User.Id),1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval List</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NF_Organization_Level__c</fullName>
        <description>Organisation Level rolled from SalesRole/ RuleEntryAssignees by a Trigger</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_PSR_Date_Check__c</fullName>
        <formula>Now()</formula>
        <label>NF_PSR_Date Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NF_Recursive_Reminder__c</fullName>
        <formula>DATETIMEVALUE(Now()+Value($Label.NF_RemindApproverStackholder))</formula>
        <label>NF_Recursive Reminder</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NF_Remaindercount__c</fullName>
        <defaultValue>1</defaultValue>
        <label>NF_Remaindercount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NF_Remaninder_Subject__c</fullName>
        <formula>IF(
 NF_PSR_Date_Check__c &gt;=ApprovalDateTechField__c,&apos;Reminder:&apos;,&apos;&apos;

)</formula>
        <label>NF_Remaninder Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_Role_Code__c</fullName>
        <description>Role Code rolled from SalesRole and RuleEntryAssignee by a Trigger.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_Role_Name__c</fullName>
        <description>RoleName rolled from SalesRole/ RuleEntryAssignees by a Trigger</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Opportunity_Name__c</fullName>
        <formula>Apttus_QPApprov__ProposalId__r.Apttus_Proposal__Opportunity__r.Name</formula>
        <label>NokiaCPQ_Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Quote_Id__c</fullName>
        <formula>Apttus_QPApprov__ProposalId__r.NokiaCPQ_Proposal_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Quote_Link__c</fullName>
        <formula>Apttus_QPApprov__ProposalId__r.Quote_Name_Hyperlink__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Quote_Name_Link__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_140,FIND(&apos;.com&apos;,$Api.Partner_Server_URL_140) + 4) &amp;  Apttus_QPApprov__ProposalId__c, Apttus_QPApprov__ProposalId__r.Apttus_Proposal__Proposal_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Name Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Link__c</fullName>
        <formula>IF($User.UITheme != &apos;Theme4d&apos; ,IF( Apttus_Approval__Object_Type__c = &apos;Apttus__Agreement_Term_Exception__c&apos;, HYPERLINK(Apttus_Approval__Object_Id__c , &quot;View Agreement Term Exception&quot;,&quot;_self&quot;), HYPERLINK(Apttus_Approval__Object_Id__c , &quot;View &quot; &amp; Apttus_Approval__Object_Type__c,&quot;_self&quot;)), 
IF( Apttus_Approval__Object_Type__c = &apos;Apttus__Agreement_Term_Exception__c&apos;, HYPERLINK(Apttus_Approval__Object_Id__c , &quot;View Agreement Term Exception&quot;,&quot;_self&quot;), HYPERLINK(&quot;/lightning/r/Opportunity/&quot; &amp; Apttus_Approval__Object_Id__c &amp; &quot;/view&quot; , &quot;View &quot; &amp; Apttus_Approval__Object_Type__c,&quot;_self&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <description>Requirement 1257</description>
        <formula>Apttus_Approval__Related_Opportunity__r.Opportunity_ID__c</formula>
        <inlineHelpText>ID of related Opportunity (Opportunity Number)</inlineHelpText>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>used to refer name of the opportunity</description>
        <formula>Apttus_Approval__Related_Opportunity__r.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <description>Requirement 1257</description>
        <formula>Apttus_Approval__Related_Opportunity_Owner__r.FirstName + &quot; &quot; + Apttus_Approval__Related_Opportunity_Owner__r.LastName</formula>
        <inlineHelpText>Owner of related Opportunity</inlineHelpText>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value__c</fullName>
        <description>Requirement 1257</description>
        <formula>Apttus_Approval__Related_Opportunity__r.Amount</formula>
        <inlineHelpText>Value of related Opportunity</inlineHelpText>
        <label>Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oppty_Cust_compliance__c</fullName>
        <formula>Apttus_Approval__Related_Opportunity__r.Customer_Compliance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Cust_compliance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_LOA_Level__c</fullName>
        <formula>Apttus_Approval__Related_Opportunity__r.LOA_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty LOA Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_L2__c</fullName>
        <formula>Apttus_Approval__Related_Opportunity__r.Org_L2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organisation Level 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_L3__c</fullName>
        <formula>Apttus_Approval__Related_Opportunity__r.Org_L3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organisation Level 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_L4__c</fullName>
        <formula>Apttus_Approval__Related_Opportunity__r.Org_L4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organisation Level 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <formula>Apttus_QPApprov__ProposalId__r.Apttus_Proposal__Proposal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Sales_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Sales Role Table Entry</description>
        <label>Related Sales Role</label>
        <referenceTo>Sales_Role__c</referenceTo>
        <relationshipLabel>Approval Requests</relationshipLabel>
        <relationshipName>SR_Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stakeholder_notified_of_recall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stakeholder notified of recall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Approval_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tech_Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tech_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tech_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Validation Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Validator_Request_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validator Request Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validator_Status__c</fullName>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tech_field_reminder__c</fullName>
        <defaultValue>1</defaultValue>
        <label>tech field reminder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ALU_I_Contracts_Queue_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>ALU-I Contracts Queue</label>
        <queue>ALU_I_Contracts_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A_A_Canada_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>NSW-CAN-NAM</label>
        <queue>A_A_Canada</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A_A_GEPS_Approval_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>NSW-NE-NAM</label>
        <queue>A_A_GEPS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>